--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
     maven {
         url "http://repo.gradle.org/gradle/repo"
   	}
+  	maven { url 'http://maven.tmatesoft.com/content/repositories/releases' }
     add(new org.apache.ivy.plugins.resolver.URLResolver()) {
       name = 'GitHub'
       addArtifactPattern 'http://cloud.github.com/downloads/[organisation]/[module]/[module]-[revision].[ext]'
@@ -21,7 +22,7 @@ repositories {
 buildscript {
     repositories {
         mavenCentral()
-        maven { url 'http://dl.bintray.com/robfletcher/gradle-plugins' }
+        maven { url 'http://dl.bintray.com/robfletcher/gradle-plugins' }        
     }
     dependencies {
         classpath 'org.gradle.plugins:gradle-compass:1.0.7'
@@ -29,15 +30,18 @@ buildscript {
 }
 
 dependencies {
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    compile 'org.mybatis:mybatis:3.2.2'
-    compile 'org.mybatis:mybatis:3.2.2'
-    compile 'org.mybatis:mybatis-migrations:3.1.0'
+    // compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
+    // compile 'org.mybatis:mybatis:3.2.2'
+    // compile 'org.mybatis:mybatis:3.2.2'
+    // compile 'org.mybatis:mybatis-migrations:3.1.0'
     
-    compile 'org.apache.pivot:pivot-core:2.0'
-    compile 'org.apache.pivot:pivot-wtk:2.0'
-    compile 'org.apache.pivot:pivot-wtk-terra:2.0'
-    compile 'org.apache.pivot:pivot-web:2.0'
+    compile 'com.google.code.gson:gson:1.7.2'
+    compile 'org.apache.pivot:pivot-core:2.0.3'
+    compile 'org.apache.pivot:pivot-wtk:2.0.3'
+    compile 'org.apache.pivot:pivot-wtk-terra:2.0.3'
+    compile 'org.apache.pivot:pivot-web:2.0.3'
+    
+    compile 'org.tmatesoft.sqljet:sqljet:1.1.8'
                 
     testCompile group: 'junit', name: 'junit', version: '4.+'
 }
